Added instance variables holder in ProtoObject. Offset 0 is always the
class object.
Added src/main/smalltalk/Redline folder, which will contain the Smalltalk
source for the runtime.
Default namespace for Smalltalk Runtime Objects is Redline.
Tracking line number for Parse tokens and adding to generated bytecode. Now any
exception shows corresponding line in Smalltalk source file


07/01/2011 Changes

Add 'sourcepath' command line option for specifying which folder to look in
for source files. The leading sourcepath names are removed from source filenames.
eg: sourcepath src/test and a source file of src/test/smalltalk/Object.st
will result in a source filename of smalltalk/Object.st and a class Object in 
the package smalltalk. 


06/01/2011 Changes

Cleaned up Smalltalk class and readying it for resolving Classes.
Send being called but dispatch wont be implemented until Class resolution in place.
Thinking through Class resolution process.


04/01/2011 Changes

Changed Smalltalk Class to be a Class Loader, and set itself as context class loader,
so code can use Thread.currentThread().getContextClassLoader() to get hold of the active
Smalltalk instance.
Added Test around generating message sends.

Added ObjectWeb ASM library for generating java bytecodes.
Added GeneratorTest to drive out Generator functionality.
Added Tracing versions of the ObjectWeb classes so I can see what is happening. 

Removed verifyNoMoreInteractions from tests until I work out how to properly ensure no
unsolicited calls are made to mocks.


01/01/2011 Changes

Adding more tests around analyser. Fleshing out interaction with generator.


28/10/2010 Changes

Added SourceFile to add methods to File that we need.
Added Tests around Analysis and interaction with generator.


24/10/2010 Changes

Added AnalyserTest to drive out interaction with Nodes and Generator.
Added Analyser class.
Added Generator class.


23/12/2010 Changes

Added parsing of source input into Node tree.