@@ -10,6 +10,8 @@ source for the runtime.
 Default namespace for Smalltalk Runtime Objects is Redline.
 Tracking line number for Parse tokens and adding to generated bytecode. Now any
 exception shows corresponding line in Smalltalk source file
+Added grammar to allow for multiple expressions seperated by '.'
+Added pop of stack when expression result is not answered.
 
 
 07/01/2011 Changes
